AR page working. Issue with distortion of image, position y-axis of flight and scale.

--- a/public/css/FlightAR/FlightAR.css
+++ b/public/css/FlightAR/FlightAR.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial;
   margin: 0;
   /* background: #E8E8E8; */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 /* Header/Logo Title -------------------------------------------------------- */
@@ -21,3 +21,21 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* .test_container {
+  top: 0%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: auto;
+  z-index: 1;
+  background: yellow;
+} */
+
+
+/* #map_2D {
+    height: 100%;
+    width: 100%;
+    background: pink;
+    position: absolute;
+} */
